# projeto1

./: agents.yaml  crew.py  main.py  pyproject.toml  tasks.yaml
